<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-19dp"
    tools:layout_editor_absoluteY="156dp">

   <TextView
       android:id="@+id/textView"
       android:layout_width="417dp"
       android:layout_height="47dp"
       android:layout_margin="20dp"
       android:width="@dimen/cardview_default_radius"
       android:background="@drawable/app_background"
       android:backgroundTint="@color/colorPrimary"
       android:padding="10dp"
       android:text="@string/txtMainActivity"
       android:textColor="@color/white"
       android:textSize="20sp"
       tools:ignore="MissingConstraints"
       tools:layout_editor_absoluteX="-5dp" />

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="170dp"
       android:layout_height="182dp"
       android:src="@drawable/baseline_align_vertical_bottom_24"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.442" />

   <EditText

       android:id="@+id/NickName"
       android:layout_width="342dp"
       android:layout_height="50dp"
       android:background="@drawable/bgedittext"
       android:textStyle="bold"
       android:hint="@string/HomeHint"
       android:textAlignment="center"
       android:textColor="@color/grey"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.725" />

   <Button
       android:id="@+id/startBtn"
       android:layout_width="342dp"
       android:layout_height="50dp"
       android:background="@drawable/bgeditbtn"
       android:text="@string/HomeButton"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.507"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.829" />


</androidx.constraintlayout.widget.ConstraintLayout>